<resources>
    <string name="app_name">TaxiPassenger</string>
    <string name="btn_confirm">确定</string>
    <string name="tv_name">姓　名</string>
    <string name="tv_phone">手机号</string>
    <string name="tv_input_info">请填写您的个人信息</string>
    <string name="start_location">出发地</string>
    <string name="destination">目的地</string>
    <string name="start_call">开始约车</string>
    <string name="reset">重置</string>
    <string name="cancel_call">取消约车</string>
</resources>
